# feelfem2

./: .gitignore  CMakeLists.txt  README.md  feelfem.pde  feelfem2copyright
GiNaC/: ginac-1.8.10.tar.bz2
GiNaC/cln-1.3.7/: Makefile  cln.pc  cln.spec  config.status  libtool
GiNaC/ginac-1.8.10/: AUTHORS  CMakeLists.txt  COPYING  GiNaC.spec  GiNaC.spec.in  INSTALL  INSTALL.CMake  Makefile  Makefile.in  NEWS  README  aclocal.m4  config.status  configure  configure.ac  ginac.pc  libtool
apps/: hello_scheme.cpp
basiclib/: feelfem_basic.pde
core/: scheme.cpp
legacy/: README.md  feelfem.lex
legacy/feelp2/: PK2_modified_8node_kikuchi.pde  README.md
samples/: glinder.pde  navier.pde  pk2.pde  test22.pde  test22n.pde
samples-P2/: grayscott.pde
samplesP2/: glinder.pde  grayscott3.pde  kura6.pde  kuramoto.pde
src/: cflag.sh  cflags_change.bash  insert
src/Assign/: Assign.cpp  Assign_EwiseQuad.cpp  Assign_print.cpp  Makefile
src/Bamg/: Bamg.cpp  BamgEdge.cpp  BamgExec.cpp  BamgSubDomain.cpp  DEBUGdrawMesh.cpp  DebugPrintBamgMesh.cpp  Makefile  makeBamgGeom.cpp  readBamgMesh.cpp
src/CodeGenerator/: Makefile  cg_AssignmentEwiseQuad.cpp  cg_AssignmentIntegral.cpp  cg_AssignmentScalar.cpp  cg_NormalLinearProblem.cpp  cg_NormalNonlinearProblem.cpp  cg_Output.cpp  code.cpp  codeGenerateMain.cpp  codeGenerateSubroutines.cpp
src/Configure/: Configure.cpp  Configure_CHECK.cpp  Configure_GeomObj.cpp  Configure_InfoGenerate.cpp  Configure_Makefile.cpp  Configure_Parametric.cpp  (+9 more)
util/: resetx11.sh
work/: FEEL P2のセッティング.md  HOWTORUN_in_WSL_ubuntu.mb  README.md
(+5582 files in other folders)
